@@ -18,9 +18,10 @@ update-manager (1:0.59.12) feisty; urgency=low
   * dist-upgrade.py:
     - support fallback when a frontend view can not be imported
       (LP#89568)
+    - log the version of the upgrader as well
   
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 Mar 2007 20:53:17 +0200
 
 update-manager (1:0.59.11) feisty; urgency=low
 
